--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,4 @@
 html{
-
     height: 100%;
 }
 
@@ -96,24 +95,11 @@ label{
         margin-bottom: 50px;
     }
     
-    .col-6{
+    .col-6, tr{
         font-size: x-large;
     }
-}
 
-@media (max-width: 700px){
-    .col-6{
-        font-size: large;
-    }
-    
 }
-
-@media (max-width: 516px){
-    #username{
-        width: 250px;
-    }
-}
-
 
 #year{
     display: inline;
@@ -168,6 +154,7 @@ h1 div{
 body::-webkit-scrollbar-track{
     margin-top: 18px;
 }
+
 #table{
     height: fit-content;
     width: 90%;
@@ -183,16 +170,13 @@ thead{
     top: 0;
 }
 
-
-
-
 th{
     background: red;
     box-shadow: inset 0 -2px 0 #000;
     padding: 10px 35px;
 }
 
-tr td{
+td{
     padding: 20px 35px;
     border-top: 1px solid #000;
 }
@@ -244,5 +228,19 @@ tbody td{
     border-top: 1px solid #000;
 }
 
+@media (max-width: 700px){
+    .col-6, tr{
+        font-size: large;
+    }
 
+}
 
+@media (max-width: 516px){
+    #username{
+        width: 250px;
+    }
+
+    td, th {
+        padding: 20px 15px;
+    }
+}
