Hour rounding fix

--- a/views/month.ejs
+++ b/views/month.ejs
@@ -30,7 +30,7 @@
                             </td>
                             <td class="middle <% if(day === populateArray[0]) {%>first
                                 <% } %>">
-                                <%= Math.round(day[1] * 10) / 10 %> Hours
+                                <%= day[1]%> Hours
                             </td>
                             <td class="right <% if(day === populateArray[0]) {%>first
                                 <% } %>">
